--- a/src/app/pages/calculation-loan-page/components/loan-params/loan-params.component.scss
+++ b/src/app/pages/calculation-loan-page/components/loan-params/loan-params.component.scss
@@ -76,7 +76,7 @@
     width: 100%;
     margin-top: 20px;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 10px;
 
     &-item {
