--- a/src/app/pages/main-form-content/componets/side-bar/side-bar.component.html
+++ b/src/app/pages/main-form-content/componets/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="side-bar">
   <div class="progress-bar__container">
-    <div class="progress-bat-title">Заполнено {{ sideBarPercantage }}%</div>
-    <mat-progress-bar class="mat-progress-bar-item" [value]="sideBarPercantage">
+    <div class="progress-bat-title">Заполнено {{ sideBarPercentage }}%</div>
+    <mat-progress-bar class="mat-progress-bar-item" [value]="sideBarPercentage">
     </mat-progress-bar>
   </div>
 
