--- a/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.scss
+++ b/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.scss
@@ -34,6 +34,7 @@
         width: 50%;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        align-items: flex-end;
         gap: 10px;
 
         .checkbox {
