--- a/src/app/pages/calculation-loan-page/components/insurances-params/insurances-params.component.html
+++ b/src/app/pages/calculation-loan-page/components/insurances-params/insurances-params.component.html
@@ -1,137 +1,138 @@
-<tes-card-layout [title]="insuranceParamsTitle">
-  <form class="insurance-params-form" [formGroup]="formInsuranceOptions">
-    <div class="insurance-terms-toggle">
-      <label class="toggle-switch">
+<!-- <tes-card-layout [title]="insuranceParamsTitle"> -->
+<form class="insurance-params-form" [formGroup]="formInsuranceOptions">
+  <tes-card-title [title]="insuranceParamsTitle"></tes-card-title>
+  <div class="insurance-terms-toggle">
+    <label class="toggle-switch">
+      <input
+        class="checkbox"
+        id="insurance-terms"
+        type="checkbox"
+        formControlName="initialPolicyTerm"
+        checked
+      />
+      <span class="toggle-slider round"></span>
+    </label>
+    <div class="insurance-terms-toggle__label__container">
+      <label class="insurance-terms-toggle__label" for="insurance-terms"
+        >Срок страхования по всем продуктам 1 год</label
+      >
+    </div>
+  </div>
+  <div class="insurance-terms">
+    <fieldset class="insurance-terms__item">
+      <label class="insurance-terms__item--label">
+        Дата начала
         <input
-          class="checkbox"
-          id="insurance-terms"
-          type="checkbox"
-          formControlName="initialPolicyTerm"
-          checked
-        />
-        <span class="toggle-slider round"></span>
-      </label>
-      <div class="insurance-terms-toggle__label__container">
-        <label class="insurance-terms-toggle__label" for="insurance-terms"
-          >Срок страхования по всем продуктам 1 год</label
-        >
+          type="date"
+          placeholder="__/__/____"
+          formControlName="policyStartDate"
+          class="insurance-terms__item--input"
+      /></label>
+    </fieldset>
+    <fieldset class="insurance-terms__item">
+      <label class="insurance-terms__item--label">
+        Дата окончания
+        <input
+          type="date"
+          formControlName="policyEndDate"
+          class="insurance-terms__item--input"
+      /></label>
+    </fieldset>
+  </div>
+  <div *ngIf="!insuranceInitialTerm">
+    <div class="insurance-terms-personal">
+      <div class="insurance-terms-personal-title">
+        <span>ОСАГО</span>
       </div>
-    </div>
-    <div class="insurance-terms">
-      <fieldset class="insurance-terms__item">
-        <label class="insurance-terms__item--label">
-          Дата начала
-          <input
-            type="date"
-            placeholder="__/__/____"
-            formControlName="policyStartDate"
-            class="insurance-terms__item--input"
-        /></label>
-      </fieldset>
-      <fieldset class="insurance-terms__item">
-        <label class="insurance-terms__item--label">
-          Дата окончания
-          <input
-            type="date"
-            formControlName="policyEndDate"
-            class="insurance-terms__item--input"
-        /></label>
-      </fieldset>
-    </div>
-    <div *ngIf="!insuranceInitialTerm">
-      <div class="insurance-terms-personal">
-        <div class="insurance-terms-personal-title">
-          <span>ОСАГО</span>
-        </div>
-        <div class="insurance-policy-terms">
+      <div class="insurance-policy-terms">
+        <fieldset class="insurance-terms__item">
+          <label class="insurance-terms__item--label">
+            Срок страхования
+            <select
+              (change)="changeStatus($event)"
+              formControlName="osagoInsurancePolicyTerm"
+              class="insurance-terms__item--select"
+              name="property_status"
+            >
+              <option value="3 месяца">3 месяца</option>
+              <option value="12 месяцев">12 месяцев</option>
+            </select>
+          </label>
+        </fieldset>
+        <div class="insurance-terms-osago">
           <fieldset class="insurance-terms__item">
             <label class="insurance-terms__item--label">
-              Срок страхования
-              <select
-                (change)="changeStatus($event)"
-                formControlName="osagoInsurancePolicyTerm"
-                class="insurance-terms__item--select"
-                name="property_status"
-              >
-                <option value="3 месяца">3 месяца</option>
-                <option value="12 месяцев">12 месяцев</option>
-              </select>
-            </label>
-          </fieldset>
-          <div class="insurance-terms-osago">
-            <fieldset class="insurance-terms__item">
-              <label class="insurance-terms__item--label">
-                Дата начала
-                <input
-                  type="date"
-                  placeholder="__/__/____"
-                  formControlName="osagoPolicyStartDate"
-                  class="insurance-terms__item--input"
-              /></label>
-            </fieldset>
-            <fieldset class="insurance-terms__item">
-              <label class="insurance-terms__item--label">
-                Дата окончания
-                <input
-                  type="date"
-                  formControlName="osagoPolicyEndDate"
-                  class="insurance-terms__item--input"
-              /></label>
-            </fieldset>
-          </div>
-        </div>
-      </div>
-      <div class="insurance-terms-personal">
-        <div class="insurance-terms-personal-title">
-          <span>КАСКО</span>
-        </div>
-        <div class="insurance-policy-terms">
-          <div class="terms-kasko insurance-policy-terms__item">
-            <div class="insurance-terms__item--label">Срок страхования</div>
-            <div class="terms-kasko__list">
+              Дата начала
               <input
-                type="button"
-                *ngFor="let insuranceTerm of insuranceTerms; index as i"
-                [value]="insuranceTerm"
-                [ngClass]="{ active: selectedInsuranceTermIndex === i }"
-                (click)="activateInsuranceTermClass(i)"
-                class="terms-kasko__list--button"
-              />
-            </div>
-          </div>
-          <div class="insurance-terms-osago">
-            <fieldset class="insurance-terms__item">
-              <label class="insurance-terms__item--label">
-                Дата начала
-                <input
-                  type="date"
-                  placeholder="__/__/____"
-                  formControlName="kaskoPolicyStartDate"
-                  class="insurance-terms__item--input"
-              /></label>
-            </fieldset>
-            <fieldset class="insurance-terms__item">
-              <label class="insurance-terms__item--label">
-                Дата окончания
-                <input
-                  type="date"
-                  formControlName="kaskoPolicyEndDate"
-                  class="insurance-terms__item--input"
-              /></label>
-            </fieldset>
-          </div>
+                type="date"
+                placeholder="__/__/____"
+                formControlName="osagoPolicyStartDate"
+                class="insurance-terms__item--input"
+            /></label>
+          </fieldset>
+          <fieldset class="insurance-terms__item">
+            <label class="insurance-terms__item--label">
+              Дата окончания
+              <input
+                type="date"
+                formControlName="osagoPolicyEndDate"
+                class="insurance-terms__item--input"
+            /></label>
+          </fieldset>
         </div>
       </div>
     </div>
+    <div class="insurance-terms-personal">
+      <div class="insurance-terms-personal-title">
+        <span>КАСКО</span>
+      </div>
+      <div class="insurance-policy-terms">
+        <div class="terms-kasko insurance-policy-terms__item">
+          <div class="insurance-terms__item--label">Срок страхования</div>
+          <div class="terms-kasko__list">
+            <input
+              type="button"
+              *ngFor="let insuranceTerm of insuranceTerms; index as i"
+              [value]="insuranceTerm"
+              [ngClass]="{ active: selectedInsuranceTermIndex === i }"
+              (click)="activateInsuranceTermClass(i)"
+              class="terms-kasko__list--button"
+            />
+          </div>
+        </div>
+        <div class="insurance-terms-osago">
+          <fieldset class="insurance-terms__item">
+            <label class="insurance-terms__item--label">
+              Дата начала
+              <input
+                type="date"
+                placeholder="__/__/____"
+                formControlName="kaskoPolicyStartDate"
+                class="insurance-terms__item--input"
+            /></label>
+          </fieldset>
+          <fieldset class="insurance-terms__item">
+            <label class="insurance-terms__item--label">
+              Дата окончания
+              <input
+                type="date"
+                formControlName="kaskoPolicyEndDate"
+                class="insurance-terms__item--input"
+            /></label>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <tes-submit-form-button
-      [formValues]="formInsuranceOptions"
-      [isDisable]="!formInsuranceOptions.valid"
-      buttonText="Рассчитать"
-    ></tes-submit-form-button>
+  <tes-submit-form-button
+    [formValues]="formInsuranceOptions"
+    [isDisable]="!formInsuranceOptions.valid"
+    buttonText="Рассчитать"
+  ></tes-submit-form-button>
 
-    <!-- <button type="submit" class="insurance-terms-personal-button">
+  <!-- <button type="submit" class="insurance-terms-personal-button">
       Рассчитать
     </button> -->
-  </form>
-</tes-card-layout>
+</form>
+<!-- </tes-card-layout> -->
