--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.html
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.html
@@ -1,257 +1,242 @@
-<tes-card-layout [title]="ownerTitle">
-  <form class="owner-form" [formGroup]="formOwnerOptions">
-    <div class="owner-products-container">
-      <div class="owner-products">
-        <fieldset class="owner-products-item">
-          <input
-            id="checkbox_osago"
-            type="checkbox"
-            class="owner-products-item__checkbox"
-            formControlName="osago"
-            name="checkbox_osago"
-          />
-          <label for="checkbox_osago" class="owner-products-item__label">
-            ОСАГО
-          </label>
-        </fieldset>
-        <fieldset class="owner-products-item">
-          <input
-            id="checkbox_kasko"
-            type="checkbox"
-            class="owner-products-item__checkbox"
-            formControlName="kasko"
-            name="checkbox_kasko"
-          />
-          <label for="checkbox_kasko" class="owner-products-item__label">
-            КАСКО
-          </label>
-        </fieldset>
-        <fieldset class="owner-products-item">
-          <input
-            id="checkbox_credit"
-            type="checkbox"
-            class="owner-products-item__checkbox"
-            formControlName="credit"
-            name="checkbox_credit"
-          />
-          <label for="checkbox_credit" class="owner-products-item__label">
-            Кредит
+<form class="owner-form" [formGroup]="formOwnerOptions">
+  <tes-card-title [title]="loanAndInsurersTitle"></tes-card-title>
+  <div class="owner-products-container">
+    <div class="owner-products">
+      <fieldset class="owner-products-item">
+        <input
+          id="checkbox_osago"
+          type="checkbox"
+          class="owner-products-item__checkbox"
+          formControlName="osago"
+          name="checkbox_osago"
+        />
+        <label for="checkbox_osago" class="owner-products-item__label">
+          ОСАГО
+        </label>
+      </fieldset>
+      <fieldset class="owner-products-item">
+        <input
+          id="checkbox_kasko"
+          type="checkbox"
+          class="owner-products-item__checkbox"
+          formControlName="kasko"
+          name="checkbox_kasko"
+        />
+        <label for="checkbox_kasko" class="owner-products-item__label">
+          КАСКО
+        </label>
+      </fieldset>
+      <fieldset class="owner-products-item">
+        <input
+          id="checkbox_credit"
+          type="checkbox"
+          class="owner-products-item__checkbox"
+          formControlName="credit"
+          name="checkbox_credit"
+        />
+        <label for="checkbox_credit" class="owner-products-item__label">
+          Кредит
+        </label>
+      </fieldset>
+    </div>
+    <div class="owner-previous-products">
+      <div class="previous-kasko">
+        <fieldset class="previous-kasko__item">
+          <label class="previous-kasko__item_label">
+            Предыдущий КАСКО
+            <select class="previous-kasko__item_select" disabled></select>
           </label>
         </fieldset>
       </div>
-      <div class="owner-previous-products">
-        <div class="previous-kasko">
-          <fieldset class="previous-kasko__item">
-            <label class="previous-kasko__item_label">
-              Предыдущий КАСКО
-              <select class="previous-kasko__item_select" disabled></select>
-            </label>
-          </fieldset>
-        </div>
-        <div class="previous-osago">
-          <fieldset class="previous-osago__item">
-            <label class="previous-osago__item_label">
-              Предыдущий ОСАГО
-              <select class="previous-kasko__item_select" disabled></select>
-            </label>
-          </fieldset>
-        </div>
+      <div class="previous-osago">
+        <fieldset class="previous-osago__item">
+          <label class="previous-osago__item_label">
+            Предыдущий ОСАГО
+            <select class="previous-kasko__item_select" disabled></select>
+          </label>
+        </fieldset>
       </div>
     </div>
-    <div class="owner-personal-information-container">
-      <div class="personal-information-title">Собственник</div>
-      <div class="owner-products">
-        <fieldset class="owner-products-item">
-          <input
-            id="checkbox_policy_holder"
-            type="checkbox"
-            class="owner-products-item__checkbox"
-            formControlName="policy_holder"
-            name="checkbox_policy_holder"
-          />
-          <label
-            for="checkbox_policy_holder"
-            class="owner-products-item__label"
-          >
-            Страхователь
-          </label>
+  </div>
+  <div class="owner-personal-information-container">
+    <tes-card-title [title]="ownerTitle"></tes-card-title>
+    <div class="owner-products">
+      <fieldset class="owner-products-item">
+        <input
+          id="checkbox_policy_holder"
+          type="checkbox"
+          class="owner-products-item__checkbox"
+          formControlName="policy_holder"
+          name="checkbox_policy_holder"
+        />
+        <label for="checkbox_policy_holder" class="owner-products-item__label">
+          Страхователь
+        </label>
+      </fieldset>
+      <fieldset class="owner-products-item">
+        <input
+          id="checkbox_driver"
+          type="checkbox"
+          class="owner-products-item__checkbox"
+          formControlName="driver"
+          name="checkbox_driver"
+        />
+        <label for="checkbox_driver" class="owner-products-item__label">
+          Водитель
+        </label>
+      </fieldset>
+    </div>
+    <tes-input-clearer
+      [formControlTitle]="'ФИО'"
+      [showClearer]="true"
+      (componentValue)="getFullName($event)"
+    >
+    </tes-input-clearer>
+    <div *ngIf="fullName" class="owner-personal-information wrapper">
+      <div class="owner-personal-information">
+        <div class="gender owner-personal-information__item">
+          <div class="owner-personal-information__item--label">Пол</div>
+          <div class="gender__list">
+            <button
+              class="gender__list--button"
+              *ngFor="let typeOfGender of genders; index as i"
+              type="button"
+              [ngClass]="{ active: selectedGenderIndex === i }"
+              (click)="activateGenderClass(i)"
+            >
+              {{ typeOfGender }}
+            </button>
+          </div>
+        </div>
+        <fieldset class="owner-personal-information__item">
+          <label class="owner-personal-information__item--label">
+            Дата рождения
+            <input
+              type="text"
+              formControlName="birthdate"
+              class="owner-personal-information__item--input"
+          /></label>
         </fieldset>
-        <fieldset class="owner-products-item">
-          <input
-            id="checkbox_driver"
-            type="checkbox"
-            class="owner-products-item__checkbox"
-            formControlName="driver"
-            name="checkbox_driver"
-          />
-          <label for="checkbox_driver" class="owner-products-item__label">
-            Водитель
-          </label>
+        <fieldset class="owner-personal-information__item">
+          <label class="owner-personal-information__item--label">
+            Место рождения
+            <input
+              type="text"
+              formControlName="bornplace"
+              class="owner-personal-information__item--input"
+          /></label>
         </fieldset>
       </div>
-      <tes-input-clearer
-        [formControlTitle]="'ФИО'"
-        [showClearer]="true"
-        (componentValue)="getFullName($event)"
-      >
-      </tes-input-clearer>
-      <div *ngIf="fullName" class="owner-personal-information wrapper">
-        <div class="owner-personal-information">
-          <div class="gender owner-personal-information__item">
-            <div class="owner-personal-information__item--label">Пол</div>
-            <div class="gender__list">
+      <div class="owner-personal-information">
+        <div class="owner-personal-information-title">
+          <span>Паспорт</span>
+        </div>
+        <div class="owner-personal-information-content">
+          <fieldset class="owner-personal-information__item">
+            <label class="owner-personal-information__item--label">
+              Серия и номер паспорта
+              <input
+                type="text"
+                formControlName="passport_number"
+                class="owner-personal-information__item--input"
+            /></label>
+          </fieldset>
+          <fieldset class="owner-personal-information__item">
+            <label class="owner-personal-information__item--label">
+              Дата выдачи
+              <input
+                type="text"
+                formControlName="passport_issued_at"
+                class="owner-personal-information__item--input"
+            /></label>
+          </fieldset>
+          <fieldset class="owner-personal-information__item">
+            <label class="owner-personal-information__item--label">
+              Код подразделения
+              <input
+                type="text"
+                formControlName="passport_division_code"
+                class="owner-personal-information__item--input"
+            /></label>
+          </fieldset>
+          <fieldset class="owner-personal-information__item_registration">
+            <label class="owner-personal-information__item--label">
+              Адрес регистрации
+              <input
+                type="text"
+                formControlName="residence_address"
+                class="owner-personal-information__item--input"
+            /></label>
+          </fieldset>
+        </div>
+      </div>
+      <div class="owner-personal-information family">
+        <div class="owner-personal-information-title">
+          <span>Семья</span>
+        </div>
+        <div class="owner-personal-information-content family-content">
+          <div class="marital-status owner-personal-information__item">
+            <div class="owner-personal-information__item--label">
+              Семейное положение
+            </div>
+            <div class="marital-status__list">
               <button
-                class="gender__list--button"
-                *ngFor="let typeOfGender of genders; index as i"
+                class="marital-status__list--button"
+                *ngFor="let typeOfMaritalStatus of maritalStatuses; index as i"
                 type="button"
-                [ngClass]="{ active: selectedGenderIndex === i }"
-                (click)="activateGenderClass(i)"
+                [ngClass]="{ active: selectedMaritalStatusIndex === i }"
+                (click)="activateMaritalStatusClass(i)"
               >
-                {{ typeOfGender }}
+                {{ typeOfMaritalStatus }}
               </button>
             </div>
           </div>
-          <fieldset class="owner-personal-information__item">
-            <label class="owner-personal-information__item--label">
-              Дата рождения
+          <tes-counter-button
+            (currentCountValue)="getKidsCount($event)"
+          ></tes-counter-button>
+        </div>
+      </div>
+      <div class="owner-personal-information family">
+        <div class="owner-personal-information-title">
+          <span>Контактные данные</span>
+        </div>
+        <div
+          class="owner-personal-information-content policy-confirmation-container"
+        >
+          <div class="policy-confirmation-content">
+            <fieldset class="owner-personal-information__item">
+              <label class="owner-personal-information__item--label">
+                Электронная почта
+                <input
+                  type="text"
+                  formControlName="email"
+                  class="owner-personal-information__item--input"
+              /></label>
+            </fieldset>
+            <fieldset class="owner-products-item">
               <input
-                type="text"
-                formControlName="birthdate"
-                class="owner-personal-information__item--input"
-            /></label>
-          </fieldset>
-          <fieldset class="owner-personal-information__item">
-            <label class="owner-personal-information__item--label">
-              Место рождения
-              <input
-                type="text"
-                formControlName="bornplace"
-                class="owner-personal-information__item--input"
-            /></label>
-          </fieldset>
-        </div>
-        <div class="owner-personal-information">
-          <div class="owner-personal-information-title">
-            <span>Паспорт</span>
-          </div>
-          <div class="owner-personal-information-content">
-            <fieldset class="owner-personal-information__item">
-              <label class="owner-personal-information__item--label">
-                Серия и номер паспорта
-                <input
-                  type="text"
-                  formControlName="passport_number"
-                  class="owner-personal-information__item--input"
-              /></label>
-            </fieldset>
-            <fieldset class="owner-personal-information__item">
-              <label class="owner-personal-information__item--label">
-                Дата выдачи
-                <input
-                  type="text"
-                  formControlName="passport_issued_at"
-                  class="owner-personal-information__item--input"
-              /></label>
-            </fieldset>
-            <fieldset class="owner-personal-information__item">
-              <label class="owner-personal-information__item--label">
-                Код подразделения
-                <input
-                  type="text"
-                  formControlName="passport_division_code"
-                  class="owner-personal-information__item--input"
-              /></label>
-            </fieldset>
-            <fieldset class="owner-personal-information__item_registration">
-              <label class="owner-personal-information__item--label">
-                Адрес регистрации
-                <input
-                  type="text"
-                  formControlName="residence_address"
-                  class="owner-personal-information__item--input"
-              /></label>
+                id="personal_data_policy_confirmation"
+                type="checkbox"
+                class="owner-products-item__checkbox"
+                formControlName="personal_data_policy_confirmation"
+                name="personal_data_policy_confirmation"
+              />
+              <label
+                for="personal_data_policy_confirmation"
+                class="owner-products-item__label policy-confirmation"
+              >
+                Соглашаюсь с условиями обработки моих персональных данных
+              </label>
             </fieldset>
           </div>
-        </div>
-        <div class="owner-personal-information family">
-          <div class="owner-personal-information-title">
-            <span>Семья</span>
-          </div>
-          <div class="owner-personal-information-content family-content">
-            <div class="marital-status owner-personal-information__item">
-              <div class="owner-personal-information__item--label">
-                Семейное положение
-              </div>
-              <div class="marital-status__list">
-                <button
-                  class="marital-status__list--button"
-                  *ngFor="
-                    let typeOfMaritalStatus of maritalStatuses;
-                    index as i
-                  "
-                  type="button"
-                  [ngClass]="{ active: selectedMaritalStatusIndex === i }"
-                  (click)="activateMaritalStatusClass(i)"
-                >
-                  {{ typeOfMaritalStatus }}
-                </button>
-              </div>
-            </div>
-            <tes-counter-button
-              (currentCountValue)="getKidsCount($event)"
-            ></tes-counter-button>
-          </div>
-        </div>
-        <div class="owner-personal-information family">
-          <div class="owner-personal-information-title">
-            <span>Контактные данные</span>
-          </div>
-          <div
-            class="owner-personal-information-content policy-confirmation-container"
-          >
-            <div class="policy-confirmation-content">
-              <fieldset class="owner-personal-information__item">
-                <label class="owner-personal-information__item--label">
-                  Электронная почта
-                  <input
-                    type="text"
-                    formControlName="email"
-                    class="owner-personal-information__item--input"
-                /></label>
-              </fieldset>
-              <fieldset class="owner-products-item">
-                <input
-                  id="personal_data_policy_confirmation"
-                  type="checkbox"
-                  class="owner-products-item__checkbox"
-                  formControlName="personal_data_policy_confirmation"
-                  name="personal_data_policy_confirmation"
-                />
-                <label
-                  for="personal_data_policy_confirmation"
-                  class="owner-products-item__label policy-confirmation"
-                >
-                  Соглашаюсь с условиями обработки моих персональных данных
-                </label>
-              </fieldset>
-            </div>
 
-            <tes-submit-form-button
-              [formValues]="formOwnerOptions"
-              [isDisable]="!formOwnerOptions.valid"
-              buttonText="Далее"
-            ></tes-submit-form-button>
-
-            <!-- <button
-              class="next-page__button"
-              mat-button
-              [disabled]="!formOwnerOptions.valid"
-            >
-              Далее
-            </button> -->
-          </div>
+          <tes-submit-form-button
+            [formValues]="formOwnerOptions"
+            [isDisable]="!formOwnerOptions.valid"
+            buttonText="Далее"
+          ></tes-submit-form-button>
         </div>
       </div>
     </div>
-  </form>
-</tes-card-layout>
+  </div>
+</form>
