--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 0px 0px 6px;
-  gap: 18px;
   color: #343e48;
   flex-wrap: wrap;
 }
@@ -91,6 +90,7 @@
 }
 
 .owner-personal-information-container {
+  margin-top: 18px;
   min-width: 100%;
   max-height: 100%;
 
