--- a/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-page.component.html
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-page.component.html
@@ -1,24 +1,23 @@
-<tes-card-layout [title]="productCalculationTitle">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 tes-wrapper-title"></div>
-      <div class="col-12">
-        <div class="tes-wrapper-content">
-          <tes-product-calculation-table
-            [data]="data"
-          ></tes-product-calculation-table>
-        </div>
+<div class="container">
+  <tes-card-title [title]="productCalculationTitle"></tes-card-title>
+  <div class="row">
+    <div class="col-12 tes-wrapper-title"></div>
+    <div class="col-12">
+      <div class="tes-wrapper-content">
+        <tes-product-calculation-table
+          [data]="data"
+        ></tes-product-calculation-table>
       </div>
-      <div class="col-12">
-        <div class="tes-wrapper-buttons">
-          <tes-button
-            [title]="'Изменить'"
-            [color]="'secondary'"
-            (click)="openCalculateDialog()"
-          ></tes-button>
-          <tes-button [title]="'Подтвердить'" [color]="'primary'"></tes-button>
-        </div>
+    </div>
+    <div class="col-12">
+      <div class="tes-wrapper-buttons">
+        <tes-button
+          [title]="'Изменить'"
+          [color]="'secondary'"
+          (click)="openCalculateDialog()"
+        ></tes-button>
+        <tes-button [title]="'Подтвердить'" [color]="'primary'"></tes-button>
       </div>
     </div>
   </div>
-</tes-card-layout>
+</div>
