--- a/src/app/pages/processing-page/components/summary/summary.component.html
+++ b/src/app/pages/processing-page/components/summary/summary.component.html
@@ -1,37 +1,35 @@
-<div class="summary container">
-  <div class="loan-container">
-    <div class="loan-header">
-      <span class="loan-header__title">Кредит</span>
-      <span class="loan-header__status">Ожидает отправки</span>
+<div class="loan-container">
+  <tes-card-title [title]="summaryTitle"></tes-card-title>
+  <div class="loan-header">
+    <span class="loan-header__status">Ожидает отправки</span>
+  </div>
+
+  <div class="loan-body">
+    <div class="loan-body__img">
+      <img
+        src="/assets/images/sovkom_logo.svg"
+        class="loan-body__img--logo"
+        alt="bank-logo"
+      />
+      <span class="loan-body__img--label">Совкомбанк</span>
     </div>
 
-    <div class="loan-body">
-      <div class="loan-body__img">
-        <img
-          src="/assets/images/sovkom_logo.svg"
-          class="loan-body__img--logo"
-          alt="bank-logo"
-        />
-        <span class="loan-body__img--label">Совкомбанк</span>
-      </div>
+    <span class="loan-body__title">Телематический кредит</span>
 
-      <span class="loan-body__title">Телематический кредит</span>
+    <p class="loan-body__tagline">
+      Для тех, кому важны минимальные ежемесячные платежи
+    </p>
 
-      <p class="loan-body__tagline">
-        Для тех, кому важны минимальные ежемесячные платежи
-      </p>
+    <p class="loan-body__description">
+      финансовая программа, с низкими ежемесячными платежами и гарантированным
+      обратным выкупом автомобиля. В рамках Вы можете выбрать опцию ПЛЮС по
+      которой стоимость КАСКО и прохождение ТО включены в ежемесячный платеж.
+      Также Вам доступен с повышенной гарантированной остаточной стоимостью.
+    </p>
 
-      <p class="loan-body__description">
-        финансовая программа, с низкими ежемесячными платежами и гарантированным
-        обратным выкупом автомобиля. В рамках Вы можете выбрать опцию ПЛЮС по
-        которой стоимость КАСКО и прохождение ТО включены в ежемесячный платеж.
-        Также Вам доступен с повышенной гарантированной остаточной стоимостью.
-      </p>
-
-      <div class="loan-footer">
-        <tes-loan-params></tes-loan-params>
-      </div>
+    <div class="loan-footer">
+      <tes-loan-params></tes-loan-params>
     </div>
   </div>
-  <tes-application-form></tes-application-form>
 </div>
+<!-- <tes-application-form></tes-application-form> -->
