set froms values

--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -103,7 +103,7 @@
           </div>
           <div class="car-info-item">
             <label class="car-info-item__label" for="horse_power"
-              >Объем двигателя</label
+              >Мощность двигателя</label
             >
             <input
               class="car-info-item__input"
@@ -118,7 +118,7 @@
               "
             >
               <small *ngIf="formCarOptions.controls['horse_power'].invalid">
-                Введите объем двигателя</small
+                Введите мощность двигателя</small
               >
             </div>
           </div>
