--- a/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.html
+++ b/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.html
@@ -43,11 +43,11 @@
                         <div class="col-6 mb-4 checkbox-line">
                           <tes-input-checkbox
                             [label]="'ОСАГО'"
-                            formControlName="kasko"
+                            formControlName="osago"
                           ></tes-input-checkbox>
                           <tes-input-checkbox
                             [label]="'КАСКО'"
-                            formControlName="osago"
+                            formControlName="kasko"
                           ></tes-input-checkbox>
                           <tes-input-checkbox
                             [label]="'Кредит'"
@@ -87,19 +87,19 @@
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Водительское удостоверение №'"
-                            formControlName="driver_licence_number"
+                            formControlName="driver_license_number"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Кем выдано'"
-                            formControlName="driver_licence_issued_by"
+                            formControlName="driver_license_issued_by"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Дата выдачи'"
-                            formControlName="driver_licence_issued_date"
+                            formControlName="driver_license_issued_date"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
