--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
@@ -119,7 +119,7 @@
 
 .owner-personal-information-container {
   min-width: 100%;
-  height: 100vh;
+  max-height: 100%;
 
   .personal-information-title {
     margin-top: 35px;
